--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,20 @@ lib_deps =
     WS2812FX
     FastLED
     PubSubClient
-    ArduinoJson
+    ArduinoJson     ;@5.13.4
     DHT sensor library
+
+; SSL+TLS_MEM+HTTP_CLIENT+HTTP_SERVER+CORE+WIFI+HTTP_UPDATE+UPDATER+OTA+OOM
+; build_flags =
+;  -DDEBUG_ESP_PORT=Serial
+;   -DDEBUG_ESP_SSL
+;   -DDEBUG_ESP_TLS_MEM
+;   -DDEBUG_ESP_HTTP_CLIENT
+;   -DDEBUG_ESP_HTTP_SERVER
+;   -DDEBUG_ESP_CORE
+;   -DDEBUG_ESP_WIFI
+;  -DDEBUG_ESP_HTTP_UPDATE
+;  -DDEBUG_ESP_UPDATER
+; -DDEBUG_ESP_OTA
+;  -DDEBUG_ESP_OOM -include "umm_malloc/umm_malloc_cfg.h"
     
