fix Rainbow cycle and mover effect

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ lib_deps =
     WS2812FX
     FastLED
     PubSubClient
-    ArduinoJson     ;@5.13.4
+    ArduinoJson ;@6.12.0     ;@5.13.4
     DHT sensor library
 
 ; SSL+TLS_MEM+HTTP_CLIENT+HTTP_SERVER+CORE+WIFI+HTTP_UPDATE+UPDATER+OTA+OOM
