Edit auto mode effect

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
-upload_port = 192.168.178.29
+;upload_port = 192.168.178.29
 lib_deps = 
     WS2812FX
     FastLED
